--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -163,8 +163,8 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Luganda: {{t-needed|lg}}
 * Luo: {{t|luo|ich}}
 * Luxembourgish: {{t|lb|Mo|m}}
-{{trans-mid}}
 * Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}
+{{trans-mid}}
 * Malay: {{t|ms|perut}}
 * Maltese: {{t|mt|stonku|m}}
 * Manchu: {{t|mnc|ᡤᡠᠸᡝᠵᡳᡥᡝ|tr=guwejihe}}
@@ -178,12 +178,14 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 *: Bokmål: {{t+|nb|mage|m}}, {{t+|nb|magesekk|m}}, {{t|nb|mavesekk|m}}
 *: Nynorsk: {{t|nn|mage|m}}, {{t|nn|magesekk|m}}
 * Novial: {{t-needed|nov}}
+* Occitan: {{t-needed|oc}}
 * Old English: {{t|ang|maga|m}}
 * Old Turkic: {{t|otk|𐰴𐰆𐰺𐰆𐰍𐰽𐰴|tr=quruɣsaq}}
 * Oriya: {{t-needed|or}}
 * Ottoman Turkish: {{t|ota|قورساق|tr=qursaq}}
 * Pashto: {{t|ps|معده|f|tr=me'dá}}, {{t|ps|ګېډه|f|tr=géḍa}}
 * Persian: {{t+|fa|معده|tr=me'de|sc=fa-Arab}}
+* Piedmontese: {{t-needed|pms}}
 * Pitjantjatjara: {{t|pjt|tjuni kata}}
 * Polish: {{t+|pl|żołądek|m}}
 * Portuguese: {{t+|pt|estômago|m}}
@@ -198,6 +200,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|желудац|m|sc=Cyrl}}, {{t|sh|стомак|m|sc=Cyrl}}
 *: Roman: {{t+|sh|želudac|m}}, {{t+|sh|stomak|m}}
+* Shan: {{t-needed|shn}}
 * Sicilian: {{t|scn|stòmmacu|m}}
 * Sindhi: {{t-needed|sd}}
 * Sinhalese: {{t+|si|බඩ|sc=Sinh}}
