--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -170,8 +170,9 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Irish: {{t|ga|brat|m}}
 * Italian: {{t+|it|sipario|m}}
 * Japanese: {{t+|ja|幕|tr=[[まく]], maku}}, [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
-* Macedonian: {{t|mk|кули́са|f}}
+* Korean: {{t+|ko|커튼}}
 {{trans-mid}}
+* Macedonian: {{t|mk|кули́са|f}}
 * Persian: {{t+|fa|پرده|tr=parde}}
 * Polish: {{t+|pl|kurtyna|f}}
 * Portuguese: {{t+|pt|cortina|f}}
