--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -44,6 +44,7 @@ Taiwan: ti̍t - literary; ta̍t - vernacular
 #: {{zh-x|這 塊 玉 值 一 萬 美元。|This jade '''is worth''' ten thousand dollars.}}
 # [[worthwhile]]
 #: {{zh-x|這 趟 旅行 太 值 了。|This journey is absolutely '''worthwhile'''.}}
+# to be on duty. e.g. 值班
 
 ====Compounds====
 {{zh-der|增值|加值稅|值回票價|年產值|價值|不值得|不值一錢|價值標準|價值判斷|不值當|價值觀念|值宿|幣值|保值|公告現值|值勤|不值一笑|值遇|加值網路|不值一看|值年|不值|一錢不值|值錢|平均值|值得|帳面價值|價值邏輯|價值論|價值指標|不值錢|值更|不值一哂|價值觀|剩餘價值|不值一文|值月|報值掛號|價值衝突|值星|升值|一文不值|值日|價值連城|值夜|儲值票|值班|值星官|產值|數值控制|社會價值|承諾值|數值分析|承值|比值|新聞價值|時值|當值|現值|淨值|數值|淨值法|成交總值|正值|期望值|月值年災|豹值|近似值|輪值|適值|酸鹼值|等值價格|股票價值|音值|面值|附加價值|總值|等值|量值|貶值|絕對值|調值}}
