--- a/en/偅/偅.11092.wikitext
+++ b/en/偅/偅.11092.wikitext
@@ -9,12 +9,33 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=zung2|y=jung2}}
+===Pronunciation===
+{{zh-pron
+|m=zhòng
+|m-s=
+|dg=
+|c=zung3
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -36,15 +57,6 @@
 {{ko-hanja|hangeul=동|rv=dong|mr=tong}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhòng]] ([[zhong4]])|wg=chung<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 ----
 
