--- a/en/傁/傁.11153.wikitext
+++ b/en/傁/傁.11153.wikitext
@@ -11,12 +11,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[sau2]]|y=sau2}}
-
-# {{defn|lang=yue|sort=人10}}
+==Chinese==
+{{zh-see|叟|v}}
 
 ----
 
@@ -29,12 +25,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=[[おきな]] (okina)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fū]] ([[fu1]]), [[sǒu]] ([[sou3]])|wg=fu<sup>1</sup>, sou<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
