--- a/en/偟/偟.11119.wikitext
+++ b/en/偟/偟.11119.wikitext
@@ -13,12 +13,35 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=wong4}}
+===Pronunciation===
+{{zh-pron
+|m=huáng
+|m-s=
+|dg=
+|c=wong4
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n,v,a
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{†}} [[leisure]]
+# {{†}} [[indulge]]
+# {{†}} [[hurried]]
 
 ----
 
@@ -44,12 +67,3 @@
 # [[wander]]
 # [[leisure]]
 # [[fearful]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[huáng]] ([[huang2]])|wg=huang<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
