--- a/en/偁/偁.11087.wikitext
+++ b/en/偁/偁.11087.wikitext
@@ -11,12 +11,34 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=ching1}}
+===Pronunciation===
+{{zh-pron
+|m=chēng
+|m-s=
+|dg=
+|c=cing1,can3,cing3
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=v
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{†}} {{zh-alt-form|稱|to [[raise]]}}
+# {{†}} {{zh-alt-form|稱|to [[state]]; to [[praise]]}}
 
 ----
 
@@ -38,12 +60,3 @@
 {{ko-hanja|hangeul=칭|rv=ching|mr=ch'ing}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chēng]] ([[cheng1]])|wg=ch'eng<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
