--- a/en/傁/傁.11153.wikitext
+++ b/en/傁/傁.11153.wikitext
@@ -4,15 +4,13 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=OHXE|ids=⿰亻叟}}
 
-# [[old]] [[man]]
-
 ====References====
 * {{Han ref|kx=0112.090|dkj=00929|hdz=10192.060|uh=5081|ud=20609}}
 
 ----
 
 ==Chinese==
-{{zh-see|叟|v}}
+{{zh-see|叟|v|[[old]] [[man]]}}
 
 ----
 
