--- a/en/偙/偙.11113.wikitext
+++ b/en/偙/偙.11113.wikitext
@@ -9,6 +9,23 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=dì
+|mc=y
+|oc=y
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{zh-only|偙儶}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -18,12 +35,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[てい]] (tei), [[たい]] (tai)|kun=[[すぐれる]] (sugureru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[dì]] ([[di4]])|wg=ti<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
