--- a/en/偓/偓.11107.wikitext
+++ b/en/偓/偓.11107.wikitext
@@ -4,19 +4,40 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=27214|canj=OSMG|ids=⿰亻屋}}
 
-# to [[fuss]]
-
 ====References====
 * {{Han ref|kx=0110.210|dkj=00853|dj=0236.050|hdz=10198.010|uh=5053|ud=20563|bh=D451|bd=54353}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ak1]]|y=ak1}}
+===Pronunciation===
+{{zh-pron
+|m=wò
+|m-s=
+|dg=
+|c=ak1,ngak1
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=pn
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+# {{zh-only|偓佺}}
+# {{surname|lang=zh}}
 
 ----
 
@@ -41,12 +62,3 @@
 # wickedness
 # stubbornness
 # tenacity
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jiē]] ([[jie1]]), [[wò]] ([[wo4]])|wg=chieh<sup>1</sup>, wo<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
