--- a/en/偋/偋.11099.wikitext
+++ b/en/偋/偋.11099.wikitext
@@ -9,12 +9,34 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[bing2]]|y=bing2}}
+===Pronunciation===
+{{zh-pron
+|m=bìng
+|m-s=
+|dg=
+|c=bing2
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n,v
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{†}} a [[secluded]] place
+# {{†}} {{zh-alt-form|摒|to [[discard]]}}
 
 ----
 
@@ -27,12 +49,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[へい]] (hei)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bǐng]] ([[bing3]]), [[dàng]] ([[dang4]])|wg=ping<sup>3</sup>, tang<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
