--- a/en/傃/傃.11155.wikitext
+++ b/en/傃/傃.11155.wikitext
@@ -9,12 +9,35 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=sou3|y=sou3}}
+===Pronunciation===
+{{zh-pron
+|m=sù
+|m-s=
+|dg=
+|c=sou3
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=v,a
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{lb|zh|literary}} to [[face]]; [[to]]; [[towards]]
+# {{lb|zh|literary}} [[usual]]; [[ordinary]]
+# {{†}} to [[observe]]; to [[abide]] by
 
 ----
 
@@ -36,12 +59,3 @@
 {{ko-hanja|hangeul=소|rv=so|mr=so}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[sù]] ([[su4]])|wg=su<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
