--- a/en/傋/傋.11163.wikitext
+++ b/en/傋/傋.11163.wikitext
@@ -9,12 +9,33 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=gau3|y=gau3}}
+===Pronunciation===
+{{zh-pron
+|m=gòu
+|m-s=
+|dg=
+|c=gong2,gau3
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -36,12 +57,3 @@
 {{ko-hanja|hangeul=강|rv=gang|mr=kang}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gòu]] ([[gou4]])|wg=kou<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
