--- a/en/傋/傋.11163.wikitext
+++ b/en/傋/傋.11163.wikitext
@@ -12,30 +12,36 @@
 ==Chinese==
 {{zh-forms}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
-|m=gòu
-|m-s=
-|dg=
-|c=gong2,gau3
-|c-t=
-|g=
-|h=pfs=
-|j=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
+|m=jiǎng
+|c=gong2
 |mc=y
 |oc=y
-|cat=n
+|cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{zh-only|𠈵傋}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=gòu
+|c=gau3
+|mc=
+|oc=
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|傋霿}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
