--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -5,8 +5,7 @@
 ===Alternative forms===
 * {{l|en|stomack}}
 
-===Etymology===
-From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, from {{etyl|la|en}} {{m|la|stomachus}}, from {{etyl|grc|en}} {{m|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}. Displaced native [[Middle English]] {{m|enm|mawe||stomach, maw}} (from [[Old English]] {{m|ang|maga}}), [[Middle English]] {{m|ang|bouk|bouk, buc|belly, stomach}} (from [[Old English]] {{m|ang|buc||belly, stomach}}, see [[bucket]]).
+your stomac is the part that food gos and if you rip it open you find magic things and probably go to jail
 
 ===Pronunciation===
 * {{IPA|/ˈstʌmək/|lang=en}}
