--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -52,7 +52,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Afrikaans: {{t|af|tel}}
 * Albanian: {{t+|sq|numëroj}}
 * American Sign Language: {{t|ase|Flat9@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp Flat9@InFinger-PalmDown-FlatB@CenterChesthigh}}
-* Arabic: {{t+|ar|عَدَّ}} imperfect: {{t|ar|يَعُدُّ}}
+* Arabic: {{t+|ar|عَدَّ}}
 * Aramaic:
 *: Syriac: {{t|syc|ܡܢܐ|tr=mna|sc=Syrc}}
 * Armenian: {{t+|hy|հաշվել}}
