--- a/en/傏/傏.11167.wikitext
+++ b/en/傏/傏.11167.wikitext
@@ -4,10 +4,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=OILR|ids=⿰亻唐}}
 
-# to [[ward off]]
-# to [[parry]]
-# to [[keep out]] ([[wind]], [[rain]], or [[cold]])
-
 ====References====
 * {{Han ref|kx=0113.070|dkj=00953|dj=0240.140|hdz=10205.040|uh=508F|ud=20623}}
 
@@ -23,13 +19,13 @@
 |mc=y
 |oc=y
 |ma=
-|cat=v
+|cat=
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{zh-only|傏𠊲}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 67]
