--- a/en/傗/傗.11178.wikitext
+++ b/en/傗/傗.11178.wikitext
@@ -9,9 +9,30 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[chù]] ([[chu4]])|wg=ch'u<sup>4</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=chù
+|m-s=
+|dg=
+|c=
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=cmn|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
