--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -149,6 +149,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Arabic: {{t|ar|مُسْتَقِيم}}
 * Armenian: {{t+|hy|ուղիղ}}
 * Aromanian: {{t|rup|ãndreptu}}
+* Assamese: {{t+|as|পোন}}
 * Asturian: {{t|ast|derechu}}
 * Bashkir: {{t|ba|төҙ}}
 * Burmese: {{t+|my|ဖြောင့်|sc=Mymr}}, {{t+|my|စင်း|sc=Mymr}}
