--- a/en/傔/傔.11174.wikitext
+++ b/en/傔/傔.11174.wikitext
@@ -7,8 +7,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=28237|canj=OTXC|ids=⿰亻兼}}
 
-# [[servant]]
-
 ====References====
 * {{Han ref|kx=0113.160|dkj=00962|dj=0241.060|hdz=10205.090|uh=5094|ud=20628|bh=D853|bd=55379}}
 
@@ -25,13 +23,16 @@
 |mc=y
 |oc=y
 |ma=
-|cat=n
+|cat=n,v
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{†}} to [[follow]]
+# {{†}} [[servant]]
+# {{†}} to [[suffice]]; to [[satisfy]]
+# {{†}} {{zh-alt-form|兼|double; twice}}
 
 ----
 
