--- a/en/傛/傛.11182.wikitext
+++ b/en/傛/傛.11182.wikitext
@@ -9,12 +9,33 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jung4]], [[jung6]]|y=yung4, yung6}}
+===Pronunciation===
+{{zh-pron
+|m=yǒng
+|m-s=
+|dg=
+|c=jung6,jung4
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -36,12 +57,3 @@
 {{ko-hanja|hangeul=용|rv=yong|mr=yong}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
