--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -217,6 +217,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Chinese:
 *: Mandarin: {{t+|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t+|cmn|彈|sc=Hani}}, {{t+|cmn|弹|tr=tán|sc=Hani}}&{{qualifier|formal}}{{t+|cmn|彈奏|sc=Hani}}, {{t+|cmn|弹奏|tr=tánzòu|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t+|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t+|cmn|吹|tr=chuī|sc=Hani}}&{{qualifier|formal}}{{t+|cmn|吹奏|tr=chuīzòu|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t+|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t+|cmn|打|tr=dǎ|sc=Hani}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
+* Estonian: {{t|et|mängida}}
 * Faroese: {{t|fo|leika}}, {{t+|fo|spæla}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer|alt=jouer de}}
