--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -211,6 +211,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Arabic: {{t|ar|عَزَفَ}}
 * Armenian: {{t+|hy|նվագել}}
 * Assamese: {{t+|as|বজোৱা}}, {{t+|as|বোৱা}}
+* Basque: {{t+|eu|jo}}
 * Belarusian: {{t|be|граць|impf}}
 * Bulgarian: {{t+|bg|игра́я|impf|sc=Cyrl}}
 * Catalan: {{t+|ca|tocar}}
