--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -241,6 +241,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Latgalian: {{t|ltg|spieļuot}}
 * Latin: {{t+|la|cano}}
 * Latvian: {{t|lv|spēlēt}}
+* Lithuanian: {{t|lt|groti}}
 * Lojban: {{t|jbo|zgipli}}
 * Macedonian: {{t|mk|свири}}
 * Maori: {{t|mi|whakatangi}}
