--- a/en/垗/垗.13083.wikitext
+++ b/en/垗/垗.13083.wikitext
@@ -1,9 +1,6 @@
 {{character info/new}}
 ==Translingual==
 
-===Etymology===
-{{Han etym}}
-
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=42113|canj=GLMO|ids=⿰土兆}}
 
@@ -14,12 +11,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ziu6]]|y=jiu6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=zhào
+|c=ziu6,siu6
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===References===
+* {{R:yue:mfccd}}
 
 ----
 
@@ -32,12 +45,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[ちょう]] (chō), [[じょう]] (jō)|kun=[[はいりどころ]] (hauridokoro)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhào]] ([[zhao4]])|wg=chao<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
