--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -583,6 +583,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Swedish: {{t+|sv|pjäs|c}}, {{t|sv|teaterstycke|n}}, {{t+|sv|drama|n}}, {{t+|sv|skådespel|n}}, {{t+|sv|teaterpjäs|c}}
 * Tagalog: {{t+|tl|dula}}
 * Turkish: {{t+|tr|oyun}}
+* Vietnamese: {{t+|vi|vở kịch}}
 {{trans-bottom}}
 
 {{trans-top|theatrical performance}}
