--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -126,8 +126,7 @@ From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to 
 {{en-verb}}
 
 # {{lb|en|transitive|intransitive}} To apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force.
-#: ''When I give the signal, '''pull''' the ropeوءطؤكؤىظىكىةكزرككرةكلشعجت
-ظكخبجعبعج.''
+#: ''When I give the signal, '''pull''' the rope.''
 #: ''You're going to have to '''pull''' harder to get that cork out of the bottle.''
 #* Bible, Genesis viii. 9
 #*: He put forth his hand {{...}} and '''pulled''' her in.
