--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -44,7 +44,9 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 ====Translations====
 {{trans-top|having been cut}}
 * Afrikaans: {{t|af|gesnyde}}
-* Assamese: {{t|as|কটা}}, {{t|as|কাটা}} {{qualifier|Central Assamese}}
+* Assamese: 
+*: Eastern: {{t|as|কটা}}
+*: Central: {{t|as|কাটা}}
 * Danish: {{t+|da|skære|alt=skåret}}
 * Dutch: {{t+|nl|snijden|alt=gesneden}}
 * Finnish: {{t+|fi|leikattu}}
@@ -67,6 +69,9 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 {{trans-bottom}}
 
 {{trans-top|reduced}}
+* Assamese: 
+*: Eastern: {{t|as|কটা}}
+*: Central: {{t|as|কাটা}}
 * Bengali: {{t|bn|কাটা}}
 * Finnish: {{t+|fi|leikattu}}, {{t+|fi|vähennetty}}, {{t|fi|kevennetty}}, {{t|fi|heikennetty}}
 * German: {{t+|de|geschnitten}}
