--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -5,7 +5,8 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OBUC|ids=⿰亻具}}
 
-# [[all]]
+====Derived characters====
+* {{l|mul|[[𬿸]], [[𭁃]], [[𭌀]], [[𭌛]], [[𭌷]], [[𭔺]], [[𭬫]], [[𮜅]], [[𮜚]], [[𮥩]], [[𮥬]]}} <!-- These characters are not related to 俱. Refer CJK Unified Ideographs Extension F at http://www.unicode.org/charts/PDF/U2CEB0.pdf -->
 
 ====References====
 * {{Han ref|kx=0109.171|dkj=00724|hdz=10177.021|uh=5036|ud=20534}}
