--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -339,3 +339,18 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 {{head|da|verb form}}
 
 # {{imperative of|finde|lang=da}}
+
+----
+
+==Middle English==
+
+===Alternative forms===
+* {{alter|enm|feend|fend|feind|feond|fiend|fond|fund|fynd|feont|feynt|vend|veond|viend}}
+
+===Etymology===
+From {{inh|enm|ang|fēond}}, in turn from {{der|enm|gem-pro|*fijandz}}.
+
+===Noun===
+{{enm-noun|findes}}
+
+# {{alt form|feend|lang=enm}}
