--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -273,8 +273,6 @@ From {{der|nn|de|Feld}}
 {{der3-u|lang=nn
 |bustadfelt
 |fagfelt
-|feltarbeid
-|feltprest
 |gangfelt
 |magnetfelt
 |minefelt
@@ -289,6 +287,10 @@ From {{der|nn|gml|velt}}
 {{nn-noun-mu}}
 
 # {{l|en|field}} {{q|in the military sense}}
+
+=====Derived terms=====
+* {{l|nn|feltarbeid}} {{q|from English}}
+* {{l|nn|feltprest}}
 
 ===Etymology 3===
 ====Verb====
