--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -176,6 +176,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 =====Descendants=====
 * {{desc|bor=1|gv|plumbis}}
 * {{desc|bor=1|ja|プラム|tr=puramu}}
+* {{desc|bor=1|gd|plumas}}
 
 =====Translations=====
 {{trans-top|the fruit}}
