--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -79,6 +79,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 *: Cantonese: {{t|yue|靚|sc=Hani}}, {{t|yue|靓|tr=leng3|sc=Hani}}, {{t|yue|好睇|tr=hou2 tai2|sc=Hani}} {{qualifier|object}}, {{t|yue|漂亮|tr=piu3 loeng6|sc=Hani}} {{qualifier|formal}}, {{t|yue|美麗|sc=Hani}}, {{t|yue|美丽|tr=mei5 lai6|sc=Hani}} {{qualifier|formal}}
 *: Mandarin: {{t+|cmn|漂亮|tr=piàoliang|sc=Hani}}, {{t+|cmn|美|tr=měi|sc=Hani}}, {{t+|cmn|好看|tr=hǎokàn|sc=Hani}}, {{t+|cmn|美麗|sc=Hani}}, {{t+|cmn|美丽|tr=měilì|sc=Hani}}
 *: Min Nan: {{t+|nan|媠|tr=súi|sc=Hani}}, {{t+|nan|美麗|sc=Hani}}, {{t|nan|美丽|tr=bí-lē|sc=Hani}}, {{t|nan|好看|tr=hó-khòaⁿ|sc=Hani}}, {{t+|nan|媠噹噹|sc=Hani}}, {{t|nan|媠当当|tr=súi-tang-tang|sc=Hani}}
+*: Teochew: {{t|zhx-teo|雅|tr=ngia2}}
 * Coptic: {{t-needed|cop}}
 * Czech: {{t+|cs|krásný}}, {{t+|cs|pěkný}}
 * Dalmatian: {{t|dlm|bial}}
