--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -31,7 +31,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 #: ''There were two men hanging around the school gates today, '''pushing''' drugs.''
 # {{lb|en|informal|transitive}} To [[approach]]; to come close to.
 #: ''My old car is '''pushing''' 250,000 miles.''
-#: ''He's pushing sixty.'' (= ''he's nearly sixty years old'')
+#: ''He's '''pushing''' sixty.'' (= ''he's nearly sixty years old'')
 # {{lb|en|intransitive}} To tense the muscles in the [[abdomen]] in order to [[expel]] its contents.
 #: ''During childbirth, there are times when the obstetrician advises the woman not to '''push'''.''
 # {{lb|en|intransitive}} To continue to attempt to persuade a person into a particular course of action.
