--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -420,6 +420,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Greek: {{t+|el|καβαλάρης|m}}
 *: Ancient: {{t|grc|δόναξ|sc=polytonic}}
 {{trans-mid}}
+* Hindi: {{t+|hi|जवारी|f}}
 * Ido: {{t+|io|kordoponteto}}
 * Irish: {{t+|ga|droichead|m}}
 * Japanese: {{t+|ja|駒|tr=こま, koma|sc=Jpan}}
