--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -319,7 +319,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 ===Etymology===
 From {{inh|en|ang|flǣsċ}}, from {{inh|en|gem-pro|*flaiską}}, from {{etyl|ine-pro|enm}} {{m|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
 
-===Pronunciation==
+===Pronunciation===
 * {{IPA|lang=enm|/flɛːʃ/|/flɛʃ/}}
 
 ===Noun===
