--- a/en/愽/愽.15696.wikitext
+++ b/en/愽/愽.15696.wikitext
@@ -31,4 +31,9 @@
 # {{defn|lang=ja|sort=心10}}
 
 ====Readings====
-* {{ja-readings|on=[[はく]] (haku)|kun=[[ひろい]] (hiroi), [[ひろめる]] (hiromeru)}}
+* {{ja-readings
+|goon=はく
+|kanon=はく
+|kanyoon=ばく
+|kun=ひろい, ひろめる
+}}
