--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -23,7 +23,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 ====Noun====
 {{en-noun|-}}
 
-# A grain, considered either a subspecies of [[wheat]], {{m|mul|Triticum aestivum subsp. spelta}}, or a separate species {{m|mul|Triticum spelta}} or ''[[Triticum dicoccon]]''.
+# {{senseid|en|Q158767}} A grain, considered either a subspecies of [[wheat]], {{m|mul|Triticum aestivum subsp. spelta}}, or a separate species {{m|mul|Triticum spelta}} or {{m|mul|Triticum dicoccon}}.
 
 =====Synonyms=====
 * {{sense|grain}} {{vern|dinkel wheat}}
