--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -28,6 +28,7 @@ Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|
 |g=
 |h=pfs=sên
 |j=
+|mb=sáing
 |md=sĭng
 |mn=xm,qz,lk,sx,tp,km,mg,hc:chhiⁿ/zz,yl,tn,kh,tc,pn:chheⁿ/seng
 |mn_note=chhiⁿ/chheⁿ - vernacular; seng - literary
