--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -320,7 +320,7 @@ Inherited from the {{inh|en|ang|port}}, from the {{der|en|la|porta||passage, gat
 {{trans-bottom}}
 
 ===Etymology 3===
-From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portāre||carry}}. Akin to {{m|en|transport}}, {{m|en|portable}}.
+From {{der|en|fro|porter}}, from {{der|en|la|portāre||carry}}. Akin to {{m|en|transport}}, {{m|en|portable}}.
 
 ====Verb====
 {{en-verb}}
