--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -217,6 +217,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Friulian: {{t|fur|ciespe|f}}, {{t|fur|emul}}, {{t|fur|bromb|m}}, {{t|fur|brugnul|m}}, {{t|fur|siespe|f}}
 * Georgian: {{t|ka|ქლიავი}}
 * German: {{t+|de|Pflaume|f}}, {{t+|de|Zwetschge|f}}
+*: Alemannic German: {{t|gsw|Flûme|f}}
 * Greek: {{t+|el|δαμάσκηνο|n}}
 *: Ancient Greek: {{t|grc|προῦμνον|n}}
 * Hebrew: {{t+|he|שְׁזִיף|m|tr=sh'zíf|sc=Hebr}}
