--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -294,6 +294,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * French: {{t+|fr|tonner}}
 * Friulian: {{t|fur|tonâ}}
 * German: {{t+|de|donnern}}
+*: Alemannic German: {{t|gsw|tschätteren}}
 * Hebrew: {{t+|he|רעם|tr=ra'am}}
 * Ido: {{t+|io|tondrar}}
 * Italian: {{t+|it|tuonare}}
