--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -3,7 +3,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=71339|canj=MFP|ids=⿸原心 (G), ⿱原心 (K)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=71339|canj=MFP|ids=⿸原心(G),⿱原心(HTJKV)}}
+
+====Derived characters====
+* {{l|mul|[[𨆸]], [[𩕮]]}}
 
 ====References====
 {{Han ref|kx=0397.060|dkj=11030|dj=0736.020|hdz=42333.100|uh=613F}}
