--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -1,6 +1,7 @@
 {{also|願}}
 {{character info/new}}
 ==Translingual==
+{{stroke order|strokes=14}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=71339|canj=MFP|ids=⿸原心(G),⿱原心(HTJKV)}}
