--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -109,9 +109,9 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
 * Lao: {{t|lo|ຕໍ່ສູ້|sc=Laoo}}, {{t|lo|ຮົບ|sc=Laoo}}
 * Latgalian: {{t|ltg|sistīs}}, {{t|ltg|ceikstētīs}}, {{t|ltg|veiktīs}}
+{{trans-mid}}
 * Latin: {{t|la|pugno}}, {{t|la|luctor}}
 * Latvian: {{t|lv|cīnīties}}, {{t|lv|kauties}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|kautis}}, {{t+|lt|muštis}}, {{t|lt|peštis}}, {{t|lt|grumtis}}
 * Low German:
 *: German Low German: {{t|nds-de|strieden}}, {{t|nds-de|fechten}}, {{t|nds-de|kämpen}}
@@ -156,6 +156,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Vietnamese: {{t+|vi|chiến đấu}}
 * Welsh: {{t+|cy|brwydro}}
 * West Frisian: {{t|fy|fjochtsje}}
+* White Hmong: {{t-needed|mww}}
 * Yakut: {{t|sah|охсуо|sc=Cyrl}}
 * Yiddish: {{t|yi|קעמפֿן}}
 * Zhuang: {{t-needed|za}}
