--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -5,6 +5,9 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=28240|canj=OJRK|ids=⿰亻故}}
 
+====Derived characters====
+* {{l|mul|[[𠼏]]}}
+
 ====References====
 * {{Han ref|kx=0110.290|dkj=00861|dj=0236.130|hdz=10186.180|uh=505A|ud=20570|bh=B0B5|bd=45237}}
 
