--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -232,9 +232,9 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Lao: {{t|lo|ມາ|sc=Laoo}}
 * Latin: {{t+|la|venio}}, {{t+|la|progredior}}
 * Latvian: {{t+|lv|nākt}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|ateiti}}
 * Lü: {{t|khb|ᦙᦱ}}
-{{trans-mid}}
 * Macedonian: {{t|mk|доаѓа|impf}}, {{t|mk|дојде|pf}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|ġie}}
@@ -301,6 +301,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Walloon: {{t+|wa|vni}}, {{t+|wa|vini}}
 * Welsh: {{t+|cy|dod}}
 * West Frisian: {{t|fy|komme}}
+* White Hmong: {{t-needed|mww}}
 * Yiddish: {{t|yi|קומען|sc=Hebr}}
 * Yoruba: {{t-needed|yo}}
 * Yucatec Maya: {{t|yua|tal}}
