--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -3,9 +3,12 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=44147|canj=GDHE|ids=⿰土皮}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=44147|canj=GDHE|ids=⿰土皮(GHTJKV)}}
 
 # [[slope]], [[bank]], [[hillside]]
+
+====Derived characters====
+* {{l|mul|[[𠶊]], [[𣔡]], [[𤊫]], [[𤷵]], [[𪸁]]}}
 
 ====References====
 * {{Han ref|kx=0226.110|dkj=04966|dj=0461.250|hdz=10436.010|uh=5761|ud=22369|bh=A959|bd=43353}}
