--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -407,7 +407,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{etyl|enm|en}} {{m|enm|feele}}, {{m|enm|fele}}, {{m|enm|feole}}, from {{etyl|ang|en}} {{m|ang|fela}}, {{m|ang|feala}}, {{m|ang|feolo||much, many}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*felu||very, much}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pélu-||many}}. Cognate with {{cog|sco|fele||much, many, great}}, {{cog|nl|veel||much, many}}, {{cog|de|viel||much, many}}, {{cog|la|plūs||more}}, {{cog|grc|πολύς||many}}. Related to {{l|en|full}}.
+See {{m|en|fele}}.
 
 ====Pronoun====
 {{en-pron}}
