--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -1,8 +1,9 @@
 {{also|Pull}}
-、{{wikipedia|dab=pull}}
+==English==
+{{wikipedia|dab=pull}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|an？g|pull！ian||to pull, draw, tug, pluck off}}. Related to {{cog|dum|pullen||to drink}}, {{cog|nds|pulen||to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla||to work hard, beat}}.
+From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to pull, draw, tug, pluck off}}. Related to {{cog|dum|pullen||to drink}}, {{cog|nds|pulen||to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla||to work hard, beat}}.
 
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/|lang=en}}
