--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -1,12 +1,14 @@
 {{also|栗}}
 {{character info/new}}
+{{character info/new|0xf9d9}}
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=91094|canj=PMWD|ids=⿰忄栗}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=91094|canj=PMWD|ids=⿰忄栗(GHTJKV ''for'' U+6144,K ''for'' U+F9D9}}
 
 ====References====
-* {{Han ref|kx=0397.200|dkj=11042|dj=0736.130|hdz=42336.040|uh=6144|ud=24900|bh=B758|bd=46936}}
+{{Han ref|kx=0397.200|dkj=11042|dj=0736.130|hdz=42336.040|uh=6144|ud=24900|bh=B758|bd=46936}}
+{{Han ref|uh=F9D9}}
 
 ----
 
@@ -78,7 +80,7 @@ This character is not used much in modern Japanese.
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=心10|hanviet=lật}}
+{{vi-hantu|[[lật]]|rs=心10}}
 
 # {{defn|lang=vi|sort=心10}}
 
