--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -4,10 +4,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=91094|canj=PMWD|ids=⿰忄栗(GHTJKV ''for'' U+6144,K ''for'' U+F9D9}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=91094|canj=PMWD|ids=⿰忄栗}}
 
 ====References====
-{{Han ref|kx=0397.200|dkj=11042|dj=0736.130|hdz=42336.040|uh=6144|ud=24900|bh=B758|bd=46936}}
+{{Han ref|kx=0397.200|dkj=11042|dj=0736.130|hdz=42336.040|uh=6144}}
 {{Han ref|uh=F9D9}}
 
 ----
