--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -62,6 +62,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Arabic: {{t|ar|فَرْع|m}}
 * Armenian: {{t+|hy|ճյուղ}}, {{t+|hy|ոստ}}
 *: Old Armenian: {{t|xcl|ճիւղ|sc=Armn}}, {{t|xcl|ոստ|sc=Armn}}, {{t|xcl|կողր|sc=Armn}}
+* Assamese: {{t+|as|ঠাল}}, {{t|as|ডাল}}
 * Asturian: {{t|ast|rama|f}}
 * Azerbaijani: {{t+|az|budaq}}
 * Bashkir: {{t|ba|ботаҡ}}
