--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -10,7 +10,9 @@
 * {{rhymes|əʊz|lang=en}}
 
 ====Verb====
-Suck my nipples
+{{head|en|verb form}}
+
+# {{en-simple past of|choose}}
 
 ===Etymology 2===
 {{etyl|fr|en}}, from {{etyl|la|en}} {{lena}} {{m|la|causa||cause, reason}}. See {{m|en|cause}}.
