--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -9,8 +9,8 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈzɛn.ɪθ/|lang=en}}
 * {{a|US}} {{IPA|/ˈzi.nɪθ/|lang=en}}
+* {{audio|En-uk-zenith.ogg|Audio (UK)|lang=en}}
 * {{audio|en-us-zenith.ogg|Audio (US)|lang=en}}
-{{rfap|en|variety=UK}}
 
 ===Noun===
 {{en-noun}}
