--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -56,6 +56,7 @@ From {{der|en|ang|port}}, from {{der|en|la|portus||port, harbour}}, ultimately f
 |portlet
 |seaport
 |spaceport
+|Westport
 }}
 
 =====Related terms=====
