--- a/en/垌/垌.13071.wikitext
+++ b/en/垌/垌.13071.wikitext
@@ -49,6 +49,33 @@
 
 # {{defn|lang=cmn|sort=土06}}
 
+{{zh-forms}}
+
+===Glyph origin===
+{{Han compound|土|同|t1=earth, ground|c1=s|c2=p|ls=psc|}}.
+
+===Pronunciation 1===
+{{zh-pron
+|m=dòng
+|c=
+|cat=
+}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=tóng
+|c=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{zh-only used in|垌塚}}.
+
+====Compounds====
+{{zh-der|垌塚}}
+
 ----
 
 ==Vietnamese==
