--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -103,7 +103,7 @@ From {{etyl|gmh|en}} {{m|gmh|spalden}}, or {{etyl|non|en}} {{m|non|spald}}.
 ==Danish==
 
 ===Etymology===
-From {{etyl|gml|da}} {{m|gml|spelte}}.
+From {{der|da|gml|spelte}}.
 
 ===Pronunciation===
 * {{IPA|/spɛlt/|[sb̥ɛlˀd̥]|lang=da}}
