--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -18,7 +18,7 @@ See {{m|en|spell}}.
 #*: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ===Etymology 2===
-From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en|osx|spelta||spelt}}; or from {{etyl|LL.|en}} {{m|la|spelta||spelt}}, from {{der|en|frk|*spelta||spelt}}; all from {{der|en|gem-pro|*spiltō}}, {{m|gem-pro|*spiltaz||spelt}}, from {{der|en|ine-pro|*(s)pelbʰ-}}, {{m|ine-pro|*(s)pelbʰ-t-||spelt, spelt meal}}. Cognate with {{cog|de|Spelz}} and {{cog|nl|spelt}}.
+From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en|osx|spelta||spelt}}; or from {{der|en|LL.|spelta||spelt}}, from {{der|en|frk|*spelta||spelt}}; all from {{der|en|gem-pro|*spiltō}}, {{m|gem-pro|*spiltaz||spelt}}, from {{der|en|ine-pro|*(s)pelbʰ-}}, {{m|ine-pro|*(s)pelbʰ-t-||spelt, spelt meal}}. Cognate with {{cog|de|Spelz}} and {{cog|nl|spelt}}.
 
 ====Noun====
 {{en-noun|-}}
