--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -73,7 +73,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 {{trans-bottom}}
 
 ===Etymology 3===
-From {{etyl|gmh|en}} {{m|gmh|spalden}}, or {{etyl|non|en}} {{m|non|spald}}.
+From {{der|en|gmh|spalden}}, or {{der|en|non|spald}}.
 
 ====Noun====
 {{en-noun}}
